# Medical-Store-Management

./: .gitignore  Admin.cpp  CMakeLists.txt  Customer.cpp  Employee.cpp  Inventory.cpp  Inventory.txt  Makefile  Menu.cpp  New_Inventory.cpp  Password.cpp  Password.txt  Purchased_Data.cpp  README.md  Supplier.cpp  Validate_Input.cpp  main.cpp
.github/workflows/: cmake.yml  makefile.yml
Header Files/: Customer.h  New_Inventory.h  Password.h  Purchased_Data.h  Supplier.h  Validate_Input.h
Supplier Data/: 101.txt  102.txt  Supplier.txt
include/: Admin.h  Customer.h  New_Inventory.h  Password.h  Purchased_Data.h  Supplier.h  Validate_Input.h
src/: Admin.cpp  Customer.cpp  Menu.cpp  New_Inventory.cpp  Password.cpp  Purchased_Data.cpp  Supplier.cpp  Validate_Input.cpp  main.cpp
